--- a/keyflow/typetest/templates/battlepass.html
+++ b/keyflow/typetest/templates/battlepass.html
@@ -1,12 +1,9 @@
 {% extends 'index.html' %}
 
 {% load static %}
-<head>
-    <!-- Linking Google fonts for icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=check_circle" />
-
-    <link rel="stylesheet" href="style.css">
-</head>
+{%block head%}
+    <link rel="stylesheet" href="/static/style.css">
+{% endblock %} 
 {% block content %}
 <cardbody>
     <h2 class = battlepass-header>BattlePass Rewards</h2>
